--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -39,6 +39,10 @@ footer {
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
+#skills .columns,
+#links .columns {
+  margin-top: 2rem;
+}
 
 #skills {
   .tag {
@@ -46,6 +50,7 @@ footer {
   }
 }
 
+$atcoder-cyan: #00C0C0;
 #links a {
   transition: color .15s ease;
   color: #999;
@@ -58,7 +63,7 @@ footer {
     color: black;
   }
   &.atcoder:hover {
-    color: #00C0C0;
+    color: $atcoder-cyan;
   }
 }
 
@@ -68,6 +73,8 @@ footer {
 }
 
 .some-happened {
+  border-top: solid 1px $primary;
+  border-bottom: solid 1px $primary;
   border: solid 1px #dfdfdf;
   margin-bottom: 10px;
 }
