--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -71,6 +71,9 @@ $atcoder-cyan: #00C0C0;
   margin-left: 1.25rem;
   color: hsl(0, 0%, 48%);
 }
+.timeline-link {
+  margin-left: 0.5rem;
+}
 
 .some-happened {
   border-top: solid 1px $primary;
