--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,9 +11,9 @@ html(lang="ja")
         header.hero.is-fullheight.is-default.is-bold
             nav.navbar(role="navigation", aria-label="main navigation")
                 .navbar-brand
-                    a.navbar-item(href="/index.html")
+                    a.navbar-item(href="index.html")
                         p 🇯🇵
-                    a.navbar-item(href="/index-en-US.html")
+                    a.navbar-item(href="index-en-US.html")
                         p 🇺🇸
                     a.navbar-item(href="assets/old")
                         p #{$T.navbar.old_website}
