Revert "Add wallpaper"
This reverts commit d66e733de51cdcb1f261234067af33ecc4d9e703.

--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@ table, tr, td, th {
 }
 
 html {
-    background-image: url("imgs/icon2.png");
-    background-position: center;
-    background-size: cover;
+    background: #eee;
 }
 
 th, td {
