--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ body {
   text-align: right;
 }
 
+.email_aa {
+  font-family: "Courier New", Consolas, monospace;
+}
+
 @media screen and (max-width: 40em) {
   body {
     padding: 1em;
