--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,5 +37,7 @@
     </ul>
     <h2>好きなこと・もの</h2>
     {{ partial "recursive-list.html" .Site.Data.i.profile.likes }}
+    <h2>相互リンク集</h2>
+    {{ partial "reciprocal-links.html" .Site.Data.i.links }}
     {{ partial "footer.html" }}
 {{ end }}
