Add driving section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -45,6 +45,9 @@
     <h2>好きなこと・もの</h2>
     {{ partial "recursive-list.html" .Site.Data.i.profile.likes }}
 
+    <h2>ドライブ関連</h2>
+    {{ partial "driving.html" .Site.Data.i.driving }}
+
     <h2>相互リンク集</h2>
     {{ partial "reciprocal-links.html" .Site.Data.i.links }}
 
