Add happy-busy banner

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,7 @@
 <p>
     CSS forked from <a href="https://rinsuki.net/">https://rinsuki.net/</a>.
 </p>
+
+<a href="https://sites.google.com/view/happy-busy/">
+    <img src="imgs/happybusy.webp" alt="時間ねぇーバナー">
+</a>
